--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ button {
     display: inline-block;
 }
 
+.opp {
+    height: 100px;
+    display: inline-block;
+}
+
 img {
     max-width:100%;
     max-height:100%;
