--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,21 @@
     box-sizing: border box;
 }
 
+html { 
+    background: url('../images/starwars.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
 .sec {
     height: 220px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .fight-section {
-    height: 80px;
+    height: 60px;
 }
 
 button {
@@ -20,7 +28,7 @@ button {
 }
 
 h1 {
-    font-size: 16px;
+    font-size: 24px;
 }
 
 .damage p {
@@ -36,15 +44,19 @@ h1 {
     height: 160px;
     display: inline-block;
     border: 2px solid black;
+    margin: auto;
+    /* padding-left: 24px; */
+    text-align: center;
     
 }
 
 img {
     max-width: 80%;
-    max-height: 80%;
-    display: block;
-    margin: auto;
-    margin-top: 10px;
+    max-height: 75%;
+    display: inline-block;
+    /* margin: auto; */
+    /* margin-top: 10px; */
+    
 }
 
 /* img.obi,
@@ -67,6 +79,10 @@ img.maul {
 .defender .maul {
     background-color: black;
     color: white;
+}
+
+p {
+    margin-top: 0px;
 }
 
 
